data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1822.wast
;; 3. **Test Description**: Construct a block with an incorrect branch target resolved due to improper handling of sibling block labels in wizard_engine.    - **Constraint**: Confirm that branches are mapped to the appropriate target block, not its siblings.    - **Relation**: This checks the block's implicit labels are appropriately scoped within their nesting.

(assert_invalid
  (module (func $type-incorrect-branch-target (result i32)
    (block (result i32) 
      (block (result i32)
        (br 1 (i32.const 10))
      )
    )
  ))
  "type mismatch"
)